--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,7 +1,11 @@
-<p><%= @question %></p>
-<p>- You</p>
-<p><%= @answer %></p>
-<p>- Your coach</p>
+<div class="sentence question">
+    <span class="sentence__expression"><%= @question %></span>
+    <span class="sentence__expressor"><em>- You</em></span>
+</div>
+<div class="sentence answer">
+    <span class="sentence__expression"><strong><%= @answer %></strong></span>
+    <span class="sentence__expressor"><em>- Your coach</em></span>
+</div>
 <div class="backlink">
-    <a href="/ask">new question?</a>
+    <a href="/ask">Ask a new question</a>
 </div>
