--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,7 @@
-<form action="answer" data-turbo="false">
-  <input type="text" name="question">
-  <input type="submit" value="ask">
+<form class="form" action="/answer" method="get">
+    <p class="subheader">Ask your coach:</p>
+    <div class="input-button">
+        <input class="input" type="text" name="question">
+        <input class="button" type="submit" value="Ask">
+    </div>
 </form>
